--- a/app/styles/_blog-admin.scss
+++ b/app/styles/_blog-admin.scss
@@ -6,4 +6,12 @@
         padding-top: 20px;
         padding-bottom: 20px;
     }
+
+    .admin-main{
+        display: flex;
+        justify-content: space-around;
+
+        .admin-main-button{
+        }
+    }
 }
