--- a/app/styles/_blog-about.scss
+++ b/app/styles/_blog-about.scss
@@ -1,54 +1,35 @@
 .blog-about{
-    background-color: #999966;
-    padding-left: 10%;
-    padding-right: 10%;
-    width: 100%;
 
-    h4{
-        font-family: "Qwigley";
-        font-size: 30pt;
-        padding-top: 20px;
+    img{
+        -webkit-transition: all 0.7s ease;
+        transition: all 0.7s ease;
     }
 
-    p{
-        font-family: 'Open Sans';
-        font-size: 13pt;
-        color: #f5f5f0;
-    }
-
-    .about-content{
-        display: flex;
-        align-items: center;
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        -webkit-flex-flow: row wrap;
-        justify-content: space-around;
-
-        
-        @media all and (max-width: 500px) {
-            .profile-pic-col{
-                padding-top: 10%;
-                padding-bottom: 10%;
-            }
-        }
-    }
-
-    .about-text{
-        position: relative;
-        float: right;
+    img:hover {
+        opacity:0.8;
+        filter: alpha(opacity=80);
     }
 
     .profile-pic{
+        display: block;
+        margin:10px auto;
         width: 200px;
         height: 200px;
         border-radius: 50%;
     }
 
-    .social{
-        position: relative;
-        bottom: 0;
-        background-color: red;
+
+    .about-me{
+        font-family: "Qwigley";
+        font-size: 30pt;
+        text-align: center;
     }
+
+    p{
+        font-family: 'Open Sans';
+        font-size: 13pt;
+        text-align: center;
+        margin: 0;
+    }
+
 }
