--- a/app/styles/placeholder.scss
+++ b/app/styles/placeholder.scss
@@ -13,95 +13,107 @@ $content-margin: 10;
   width: 100%;
 
   .blog-header{
-    .navbar-fixed-top{
-      margin-bottom: 0px;
-    }
 
-    .navbar-default.atblog{
-      background: white;
-      .navbar-brand{
-        color: grey;
-      }
-      .navbar-nav{
-        li{
-          a{
-            color: grey;
-          }
-          a:hover{
-            color: grey;
-          }
-        }
-      }
-    }
+    background-color: #f2f2f2;
+    min-height: 100%;
+    position: fixed;
+    width:25%;
 
-    .navbar-default{
-      padding-top: 10px;
-      background-color: transparent;
-      background: transparent;
-      border-color: transparent;
-
-      .navbar-brand{
-        left: 25%;
-        position: absolute;
-        color: white;
-        padding-left: 0;
+    .blog-nav-title-container{
+      width: 100%;
+      display: flex;
+      justify-content: space-around;
+      
+      .blog-nav-title{
+        margin: auto;
         font-family: 'Qwigley', cursive;
         font-size: 50px;
       }
 
-      .navbar-nav{
-        margin-right: 25%;
-        li{
-          a{
-            font-family: 'Poiret One', cursive;
-            font-size: 20px;
-            position: relative;
-            text-decoration: none;
-            color: white;
-          }
-          a:hover{
-            color: white;
-          }
-          a:before {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: white;
-            visibility: hidden;
-            -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-            -webkit-transition: all 0.2s ease-in-out 0s;
-            transition: all 0.3s ease-in-out 0s;
-          }
-          a:hover:before {
-            visibility: visible;
-            -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-          }
+    }
+
+    .nav{
+      padding-top: 10px;
+      li{
+        a{
+          color:#666666;
+          text-align: center;
+          font-family: 'Poiret One', cursive;
+          font-size: 20px;
+          -webkit-transition: all 0.7s ease;
+          transition: all 0.7s ease;
         }
       }
     }
-  }
 
-  .blog-top{
-    img {
-      -webkit-transition: all 0.7s ease;
-      transition: all 0.7s ease;
+    .nav{
+      li{
+        a:hover{
+          text-decoration: none;
+        }
+      }
     }
 
-    img:hover {
-         opacity:0.8;
-            filter: alpha(opacity=80);
-    }
+    // .navbar-default{
+    //   padding-top: 10px;
+    //   // background-color: transparent;
+    //   // background: transparent;
+    //   // border-color: transparent;
+
+
+    //   // .navbar-nav{
+    //   //   margin-right: 25%;
+    //   //   li{
+    //   //     a{
+    //   //       font-family: 'Poiret One', cursive;
+    //   //       font-size: 20px;
+    //   //       position: relative;
+    //   //       text-decoration: none;
+    //   //       color: white;
+    //   //     }
+    //   //     a:hover{
+    //   //       color: white;
+    //   //     }
+    //   //     a:before {
+    //   //       content: "";
+    //   //       position: absolute;
+    //   //       width: 100%;
+    //   //       height: 2px;
+    //   //       bottom: 0;
+    //   //       left: 0;
+    //   //       background-color: white;
+    //   //       visibility: hidden;
+    //   //       -webkit-transform: scaleX(0);
+    //   //       transform: scaleX(0);
+    //   //       -webkit-transition: all 0.2s ease-in-out 0s;
+    //   //       transition: all 0.3s ease-in-out 0s;
+    //   //     }
+    //   //     a:hover:before {
+    //   //       visibility: visible;
+    //   //       -webkit-transform: scaleX(1);
+    //   //       transform: scaleX(1);
+    //   //     }
+    //   //   }
+    //   // }
+    // }
   }
+
+  // .blog-top{
+  //   img {
+  //     -webkit-transition: all 0.7s ease;
+  //     transition: all 0.7s ease;
+  //   }
+
+  //   img:hover {
+  //        opacity:0.8;
+  //           filter: alpha(opacity=80);
+  //   }
+  // }
 
   .blog-main{
+    padding-left: 25%;
     min-height: 100%;
-    position: absolute;
-    width: 100%;
+    width: 75%;
   }
 
 }
