--- a/app/styles/_blog-content.scss
+++ b/app/styles/_blog-content.scss
@@ -14,9 +14,8 @@ $blog-body-color: #669999;
         margin-right: 5%;
     }
 
-    margin-left: 25%;
-    margin-right: 25%;
     padding-bottom: $interblog-space;
+    width: 100%;
 
     .blog-title{
         text-align: center;
