--- a/app/styles/_blog-contents.scss
+++ b/app/styles/_blog-contents.scss
@@ -4,4 +4,8 @@
     background-color: white;
     padding-bottom: 10px;
     padding-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
